Cambios a  una mejor tipografia

--- a/public/privacy_policy.html
+++ b/public/privacy_policy.html
@@ -8,7 +8,7 @@
         </style>
     </header>
     <body bgcolor="lightcoral">
-        <div id="Hoja" style="font-style: normal; font-family: Verdana;">
+        <div id="Hoja" style="font-style: normal; font-family: Geneva, sans-serif;">
 
 <h1 style="text-align: center; color: azure;">Privacy Policy</h1>
 <p>Last updated: June 03, 2021</p>
